fix spacing around sections for search page - part of #356

--- a/web/themes/custom/asulib_barrio/scss/components/views.scss
+++ b/web/themes/custom/asulib_barrio/scss/components/views.scss
@@ -62,9 +62,11 @@
 .view-id-solr_search_content {
     &.view-display-id-block_1 {
         background: #F2F2F2;
-        margin-bottom: 40px;
+        margin-bottom: $small-padding;
+        padding-bottom: $small-padding;
         .views-view-grid {
-            margin: 15px;
+            margin-left: 15px;
+            margin-right: 15px;
         }
         .collection-result {
             margin: 10px 10px 10px 0;
